Revisão do código

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <header>
-            <div id="logodiv">
+            <div id="logodiv"></div>
+            <div> 
                 <img id="logo" src="imagens/logomarca.png" alt="Trabalho e Crescimento"/>
             </div>
             <ul id="menu">
@@ -117,6 +118,7 @@
             <div class="coluna6">
                 <img class="icone" src="imagens/Logo_ONU.png" alt="logomarca da ONU"/>
             </div>
+        </section>
             <div>
                 <p class="centralizado">As Nações Unidas são uma organização internacional fundada em 1945. Atualmente composta por 193 Estados-membros , a ONU e o seu trabalho são guiados pelos propósitos e princípios contidos na sua Carta fundadora .</p>
                 <p class="centralizado">A ONU evoluiu ao longo dos anos para acompanhar um mundo em rápida mudança.</p>
