Correção da DIV "Sobre"

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <header>
-            <div id="logodiv"></div>
-            <div> 
+            <div id="logodiv">
                 <img id="logo" src="imagens/logomarca.png" alt="Trabalho e Crescimento"/>
             </div>
             <ul id="menu">
@@ -118,7 +117,6 @@
             <div class="coluna6">
                 <img class="icone" src="imagens/Logo_ONU.png" alt="logomarca da ONU"/>
             </div>
-        </section>
             <div>
                 <p class="centralizado">As Nações Unidas são uma organização internacional fundada em 1945. Atualmente composta por 193 Estados-membros , a ONU e o seu trabalho são guiados pelos propósitos e princípios contidos na sua Carta fundadora .</p>
                 <p class="centralizado">A ONU evoluiu ao longo dos anos para acompanhar um mundo em rápida mudança.</p>
@@ -128,16 +126,14 @@
             </section>
 
         <section id="sobre" class="destaque">
-            <div class="colunadois">
+            <div>
                 <h3 class="centralizado">Quem sou eu?!</h3>
                 <p class="justificado">Me chamo Cláudia Estevão, tenho 52 anos, secretária por formação, sempre atuando na área administrativa e, atualmente, em transição de carreira para a área de TI.</p>
-                <p class="justificado">Como uma eterna estudante não paro de buscar conhecimento para meu crescimento pessoal e profissional. E é nessa caminhada de aprendizado que me encontro com o incrível mundo dos "códigos", algo tão apaixonante que se torna até viciante e aos poucos está conquistando minha mente e coração.</p>
+                <p class="justificado">Como uma eterna estudante não paro de buscar conhecimento para meu crescimento pessoal e profissional. E é nessa caminhada de aprendizado que me encontro com o incrível mundo dos "códigos", algo tão apaixonante e viciante, que aos poucos está conquistando minha mente e coração.</p>
                 <p class="justificado">Neste projeto desejo transmitir a todos a preocupão com um tema tão atual e delicado: o desemprego. Abordar o tema mostrando um dos 17 objetivos a serem alcançados pelos países membros da ONU - a ODS 8 - para que com muito empenho, compromisso e responsabilidade seja alcançado.</p>
             </div>
-        </section>
-        <section>
-            <div class="colunadois">
-                <img id="sobre" src="imagens/eu.jpg" alt="Uma mulher realizada!"/>
+            <div>
+                <img src="./imagens/eu.jpg" alt="Uma mulher realizada!"/>
             </div>
         </section>
 
