Atualização do código

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>ODS 8 - Trabalho e Crescimento</title>
         <link rel="stylesheet" href="estilo.css">
-        <meta name="viewport" content="width:device-width, inicial-scale=1.0"
+        <meta name="viewport" content="width:device-width, inicial-scale=1.0">
     </head>
     <body>
         <header>
@@ -33,11 +33,11 @@
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/AGV3rW83UKk?si=j_reuGQw9oXCwrrh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            </div>
                 <h2 class="centralizado">O que é a ODS 8?!</h2>
-                <p class="justificado">É um objetivo apoiado pelas Nações Unidas – ONU, para o desenvolvimento sustentável enfrentado pelas pessoas no Brasil e no mundo. Tendo como premissa um crescimento anual de pelo menos 7% do PIB (produto interno bruto) dentre os países menos desenvolvidos.</p>
+                <p class="justificado">É um dos objetivos apoiados pela Organização das Nações Unidas – ONU, para o desenvolvimento sustentável enfrentado pelas pessoas no Brasil e no mundo. Tendo como premissa um crescimento anual de pelo menos 7% do PIB (produto interno bruto) dentre os países menos desenvolvidos.</p>
                 <p class="justificado">Para que esse crescimento per capita aconteça é necessário elevar a produtividade, com a diversificação, modernização e inovação tecnológica nos setores de alto valor agregado e em mão de obra. Promovendo políticas para gerar emprego decente, empreendedorismo, criatividade e inovação. Incentivando a formalização e crescimento das micro, pequenas e médias empresas e proporcionando acesso a serviços financeiros.  Além disso, é preciso incentivar o consumo sustentável através dos recursos globais para que o crescimento econômico não seja motivo do aumento da degradação ambiental.</p>
                 <p class="justificado">Entre todos esses compromissos da ODS 8, é preciso até 2020 - reduzir substancialmente a quantidade de jovens sem emprego, educação ou formação como forma de estratégia global implementada pelo Pacto Mundial para o Emprego da Organização Internacional do Trabalho (OIT); até 2025 - adotar medidas apara acabar com o trabalho forçado, a escravidão moderna, o tráfico de pessoas e o trabalho infantil; até 2030 - alcançar o emprego pleno e decente para mulheres, homens, jovens e pessoas com deficiência. Garantir direitos trabalhistas e a promoção de trabalho seguro para todos os trabalhadores, inclusive migrantes e pessoas em empregos precários.</p>
                 <p class="justificado">E estimularr o turismo sustentável, que gera emprego, promove cultura e os produtos locais, para que os comerciantes possam obter das instituições financeiras acesso a serviços bancários e de seguros. Tudo isso com o apoio da Inciativa de Ajuda para o Comércio (Aid for Trade), para países em desenvolvimento e menos desenvolvidos.</p>
-           </section>
+        </section>
 
         <section id="acoes" class="destaque">
             <div class="coluna1">
@@ -45,12 +45,15 @@
                 <br>
                 <img class="icone" src="imagens/crescimento.avif" alt="grafico"/>
            </div>
-           <div>                                                                    
+            <div>                                                             
                 <br>
                 <br>
+            </div> 
+            <div>
                 <h2 class="centralizado">Algumas ações</h2>
                 <h3 class="centralizado">Crescimento Sutentado e Sustentável</h3>
-                <div class="coluna1">
+            </div>
+            <div class="coluna1">
                 <p class="justificado">Desenvolvimento Sustentado: Crescimento sustentado considera o acesso dos indivíduos a serviços e oportunidades, tanto no presente quanto no futuro, pelo amplo desenvolvimento integrado que reflita não somente o nível de renda dos indivíduos, mas também o acesso a serviços que influenciam a qualidade de vida das pessoas, como o emprego digno, educação e saúde de qualidade. </p>
                 <a id="mais" href="https://revistas.ufg.br/revistaufg/article/view/48173/23518" target="_blank">Saiba mais!</a>
                 <p class="justificado">Desenvolvimento Sustentável: é capaz de suprir as necessidades da geração atual, sem comprometer a capacidade de atender as necessidades das futuras gerações. É o desenvolvimento que não esgota os recursos para o futuro. E Para ser alcançado, o desenvolvimento sustentável depende de planejamento e do reconhecimento de que os recursos naturais são finitos. O desenvolvimento sustentável sugere, de fato, qualidade em vez de quantidade, com a redução do uso de matérias-primas e produtos e o aumento da reutilização e da reciclagem.</p>
@@ -59,12 +62,12 @@
         </section>
 
         <section id="direitos" class="destaque">
-            <div class="coluna2">
+            <div class="coluna1">
                 <img class="icone" src="imagens/diversidade.jpg" alt="Pessoas diversas"/>
             </div>
             <div>
                 <h2 class="centralizado">Direitos Trabalhistas</h2>
-                <h3 class="centralizado">Iclusão e Diversidade</h3>
+                <h3 class="centralizado">Inclusão e Diversidade</h3>
                 <p class="justificado">Organizações que incentivam a diversidade têm 45% mais chances de relatar um crescimento na participação de mercado da companhia em um ano e 70% mais chances de declarar a conquista de um novo mercado.</p>
                 <p class="justificado">Promover uma gestão inclusiva e fortalecer uma equipe com colaboradores de perfil diversificado pode ser um passo para garantir vantagem competitiva no mercado.</p>
                 <p class="justificado">Promover práticas de integração é uma maneira de estimular a troca de experiências, incentivar o respeito às diferenças e valorizar a diversidade, bem como fortalecer a inclusão.</p>
@@ -74,23 +77,26 @@
         </section>
 
         <section id="metas" class="destaque">
-            <di>
+            <div>
                 <h2 class="centralizado">Metas:</h2>
+            </div>
+        </section>
+            <div>
                 <h3 class="centralizado">Erradicação do Trabalho Escravo Moderno</h3> 
             </di>
-            <div class="coluna3">  
+            <div class="coluna1">  
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/YsxWccqgPQk?si=aJTz_y-yFrIJ6rqt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>   
                 <h3 class="centralizado">Eliminação do Trabalho Infantil</h3>
             </div>
-            <div class="coluna4">
+            <div class="coluna1">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/C7l0AB--I3c?si=GX2vuSKOZCFzDJrx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>"
             </div>
         </section>
             <div>
         <section id="projetos" class="destaque">
                 <h2 class="centralizado">Projetos que deram certo:</h2>
-                <p class="justificado">ElasNa_Tech: curso idealizado em parceria com a JA Brasil, curso inédito de tecnologia exclusivamente para mulheres.</p> 
+                <p class="justificado">ElasNa_Tech: curso idealizado em parceria com a JA Brasil, CRR e IBM, inédito  ede tecnologia exclusivamente para mulheres.</p> 
                 <a id="mais" href="https://jabrasil.org.br/elasnatech23/" target="_blank">Conheça!</a>
                 <p class="justificado">Embarque Digital:  um programa educacional de fomento à formação de capital humano especializado na área de Tecnologia da Informação e Comunicação na Cidade de Recife. O propósito do Programa Embarque Digital é formar mais estudantes para atuação no setor de tecnologia, contribuindo para a mudança de vida de estudantes em vulnerabilidade social e o consequente fortalecimento do setor de tecnologia da Cidade do Recife.</p> 
                 <a id="mais" href="http://www.portaldaeducacao.recife.pe.gov.br/content/o-embarque-digital" target="_blank">Conheça!</a>
@@ -106,7 +112,7 @@
 
         <section id="ods" class="destaque">
                 <h2 class="centralizado">Conheça as 17 ODS da ONU:</h2>
-            <div class="coluna5">   
+            <div class="coluna1">   
                 <img class="icone" src="imagens/17ods.jpg" alt="As 17 ODS"/>
                 <a id="mais" href="https://brasil.un.org/pt-br/sdgs" target="_blank">Clique aqui</a>
             </div> 
@@ -114,7 +120,7 @@
 
         <section id="onu" class="destaque">
                 <h2 class="centralizado">Sobre a ONU</h2>
-            <div class="coluna6">
+            <div class="coluna2">
                 <img class="icone" src="imagens/Logo_ONU.png" alt="logomarca da ONU"/>
             </div>
             <div>
@@ -123,7 +129,7 @@
                 <p class="centralizado">Mas uma coisa permaneceu igual: continua a ser o único lugar na Terra onde todas as nações do mundo podem reunir-se, discutir problemas comuns e encontrar soluções partilhadas que beneficiem toda a humanidade.</p>
                 <a id="mais" href="https://www.un.org/en/about-us" target="_blank">Continua!</a>
             </div>
-            </section>
+        </section>
 
         <section id="sobre" class="destaque">
             <div>
